<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wzmame.pictour.activity.NewTour"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tour_name_label"
        android:id="@+id/tvName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/etName"
        android:gravity="center_vertical"
        android:paddingLeft="0dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etName"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/tour_name_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/description_label"
        android:id="@+id/tvHomeDescription"
        android:layout_below="@+id/tvName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDescription"
        android:layout_below="@+id/tvHomeDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etName"
        android:layout_alignEnd="@+id/etName"
        android:hint="@string/description_hint"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/locations_label"
        android:id="@+id/tvLocations"
        android:layout_below="@+id/etDescription"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ListView
        android:id="@+id/lvLocations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/llFooterButtons"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvLocations"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:id="@+id/llFooterButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_button_label"
            android:layout_weight="1"
            android:onClick="onDoneAction"
            android:contentDescription="@string/done_button_label"
            android:layout_marginTop="5dp" />

        <Button
            android:id="@+id/btnAddLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_location_button_label"
            android:layout_weight="1"
            android:onClick="onAddLocationAction"
            android:contentDescription="@string/add_location_button_label"
            android:layout_marginTop="5dp" />

    </LinearLayout>
</RelativeLayout>
